#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-02
2013-12-09 David Schneider
- Bug fixes and more detailed debugging statements.
- Command line wrapper for psana module.

Tag: V00-00-01
2013-12-04 David Schneider
- first production tag, however more testing needs to be done before 
  using in place of o2o-translate.